home page with variable on admin

--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -29,8 +29,8 @@
             <div class="hpanel">
 
             <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#tab-1">Project</a></li>
-                <li class=""><a data-toggle="tab" href="#tab-2">Messages</a></li>
+                <li class="active"><a data-toggle="tab" href="#tab-1">Users</a></li>
+                <li class=""><a data-toggle="tab" href="#tab-2">Notifications</a></li>
             </ul>
             <div class="tab-content">
                 <div id="tab-1" class="tab-pane active">
@@ -45,172 +45,29 @@
                                 <thead>
                                 <tr>
 
-                                    <th>#</th>
-                                    <th>Project </th>
-                                    <th>Name </th>
-                                    <th>Phone </th>
-                                    <th>Company </th>
-                                    <th>Completed </th>
-                                    <th>Task</th>
-                                    <th>Date</th>
+                                    <th>ID </th>
+                                    <th>Avatar </th>
+                                    <th>Email </th>
+                                    <th>First Name </th>
+                                    <th>Last Name </th>
+                                    <th>Created</th>
+                                    <th>Updated</th>
                                     <th>Action</th>
                                 </tr>
                                 </thead>
                                 <tbody>
+                                  <% users.forEach(function (user) { %>
                                 <tr>
-                                    <td>1</td>
-                                    <td>Project <small>This is example of project</small></td>
-                                    <td>Patrick Smith</td>
-                                    <td>0800 051213</td>
-                                    <td>Inceptos Hymenaeos Ltd</td>
-                                    <td><span class="pie">2/45</span></td>
-                                    <td>20%</td>
-                                    <td>Jul 14, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
+                                    <td><%=user.id%></td>
+                                    <td><img src="<%=user.avatar%>" height="50" width="50" class="img-circle m-b m-t-md" alt="logo"></td>
+                                    <td><%=user.email%></td>
+                                    <td><%=user.first_name%></td>
+                                    <td><%=user.last_name%></td>
+                                    <td><%=user.created_at%></td>
+                                    <td><%=user.updated_at%>/td>
+                                    <td><a href="/admin/user/<%=user.id%>/edit"><i class="fa fa-edit text-success"></i></a></td>
                                 </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Alpha project</td>
-                                    <td>Alice Jackson</td>
-                                    <td>0500 780909</td>
-                                    <td>Nec Euismod In Company</td>
-                                    <td><span class="pie">1/5</span></td>
-                                    <td>40%</td>
-                                    <td>Jul 16, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Betha project</td>
-                                    <td>John Smith</td>
-                                    <td>0800 1111</td>
-                                    <td>Erat Volutpat</td>
-                                    <td><span class="pie">4/7</span></td>
-                                    <td>75%</td>
-                                    <td>Jul 18, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Gamma project</td>
-                                    <td>Anna Jordan</td>
-                                    <td>(016977) 0648</td>
-                                    <td>Tellus Ltd</td>
-                                    <td><span class="pie">12/3</span></td>
-                                    <td>18%</td>
-                                    <td>Jul 22, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Alpha project</td>
-                                    <td>Alice Jackson</td>
-                                    <td>0500 780909</td>
-                                    <td>Nec Euismod In Company</td>
-                                    <td><span class="pie">2/5</span></td>
-                                    <td>40%</td>
-                                    <td>Jul 16, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Project <small>This is example of project</small></td>
-                                    <td>Patrick Smith</td>
-                                    <td>0800 051213</td>
-                                    <td>Inceptos Hymenaeos Ltd</td>
-                                    <td><span class="pie">1/5</span></td>
-                                    <td>20%</td>
-                                    <td>Jul 14, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Gamma project</td>
-                                    <td>Anna Jordan</td>
-                                    <td>(016977) 0648</td>
-                                    <td>Tellus Ltd</td>
-                                    <td><span class="pie">2/8</span></td>
-                                    <td>18%</td>
-                                    <td>Jul 22, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Project <small>This is example of project</small></td>
-                                    <td>Patrick Smith</td>
-                                    <td>0800 051213</td>
-                                    <td>Inceptos Hymenaeos Ltd</td>
-                                    <td><span class="pie">15/5</span></td>
-                                    <td>20%</td>
-                                    <td>Jul 14, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Alpha project</td>
-                                    <td>Alice Jackson</td>
-                                    <td>0500 780909</td>
-                                    <td>Nec Euismod In Company</td>
-                                    <td><span class="pie">2/3</span></td>
-                                    <td>40%</td>
-                                    <td>Jul 16, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Betha project</td>
-                                    <td>John Smith</td>
-                                    <td>0800 1111</td>
-                                    <td>Erat Volutpat</td>
-                                    <td><span class="pie">4/5</span></td>
-                                    <td>75%</td>
-                                    <td>Jul 18, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Gamma project</td>
-                                    <td>Anna Jordan</td>
-                                    <td>(016977) 0648</td>
-                                    <td>Tellus Ltd</td>
-                                    <td><span class="pie">2/12</span></td>
-                                    <td>18%</td>
-                                    <td>Jul 22, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Alpha project</td>
-                                    <td>Alice Jackson</td>
-                                    <td>0500 780909</td>
-                                    <td>Nec Euismod In Company</td>
-                                    <td><span class="pie">2/3</span></td>
-                                    <td>40%</td>
-                                    <td>Jul 16, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Project <small>This is example of project</small></td>
-                                    <td>Patrick Smith</td>
-                                    <td>0800 051213</td>
-                                    <td>Inceptos Hymenaeos Ltd</td>
-                                    <td><span class="pie">1/5</span></td>
-                                    <td>20%</td>
-                                    <td>Jul 14, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Gamma project</td>
-                                    <td>Anna Jordan</td>
-                                    <td>(016977) 0648</td>
-                                    <td>Tellus Ltd</td>
-                                    <td><span class="pie">10/50</span></td>
-                                    <td>18%</td>
-                                    <td>Jul 22, 2013</td>
-                                    <td><a href="#"><i class="fa fa-check text-success"></i></a></td>
-                                </tr>
+                                <% }) %>
                                 </tbody>
                             </table>
                         </div>
