--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -1,7 +1,7 @@
 <% include forms/header %>
 
 <div class="back-link">
-    <a href="/users/<%=user.id%>" class="btn btn-primary">Back</a>
+    <a href="/projects" class="btn btn-primary">Back</a>
 </div>
 <div class="register-container animate-panel">
     <div class="row">
