--- a/views/projects/edit.ejs
+++ b/views/projects/edit.ejs
@@ -31,7 +31,7 @@
                             </div>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-success">Edit Project</button>
+                                <button class="btn btn-success">Submit</button>
                             </div>
                         </form>
                 </div>
