--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -39,7 +39,7 @@
                             </div>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-success">Edit Profile</button>
+                                <button class="btn btn-success">Submit</button>
                             </div>
                         </form>
                 </div>
