--- a/views/clients/edit.ejs
+++ b/views/clients/edit.ejs
@@ -40,7 +40,7 @@
                             </div>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-success">Edit Client</button>
+                                <button type="submit" class="btn btn-success">Submit</button>
                             </div>
                         </form>
                 </div>
