--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="text-center m-b-md">
-                <h3>New Project</h3>
+                <h3>Create Project</h3>
             </div>
             <div class="hpanel">
                 <div class="panel-body">
