readme updated with todo for next week and all functionality in place on heroku and local

--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -8,7 +8,7 @@
         <div class="col-md-12">
             <div class="text-center m-b-md">
                 <h3>Edit User</h3>
-            </div
+            </div>
             <div class="hpanel">
                 <div class="panel-body">
                         <form action="/admin/user/<%=user.id%>?_method=PUT" id="loginForm" method="POST">
