link not working

--- a/views/admin/nav/main.ejs
+++ b/views/admin/nav/main.ejs
@@ -142,7 +142,7 @@
                         <small class="text-muted"> Admin: <%=admin.admin%> <b class="caret"></b></small>
                     </a>
                     <ul class="dropdown-menu animated flipInX m-t-xs">
-                      <li><a href="/admin/<%=admin.id%>/edit">Edit Profile</a></li>
+                      <li><a href="/admin/user/<%=admin.id%>/edit">Edit Profile</a></li>
                       <li><a href="/projects/new">Add Projects</a></li>
                       <li><a href="/clients/new">Add Clients</a></li>
                       <li class="divider"></li>
