--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -9,6 +9,8 @@
     <!-- Page title -->
     <title>The ReFactory</title>
 
+    <link rel="shortcut icon" type="image/ico" href="../images/favicon.ico" />
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
 
