--- a/views/clients/forms/header.ejs
+++ b/views/clients/forms/header.ejs
@@ -9,6 +9,7 @@
     <!-- Page title -->
     <title>The ReFactory</title>
 
+    <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
 
     <!-- Vendor styles -->
     <link rel="stylesheet" href="../../../stylesheets/vendor/fontawesome/css/font-awesome.css" />
