--- a/views/projects/forms/header.ejs
+++ b/views/projects/forms/header.ejs
@@ -8,6 +8,7 @@
 
     <!-- Page title -->
     <title>The ReFactory</title>
+    <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
 
 
     <!-- Vendor styles -->
