--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -39,12 +39,11 @@
 <div class="back-link">
     <a href="/" class="btn btn-primary">Back</a>
 </div>
-<div class="register-container">
+<div class="register-container animate-panel">
     <div class="row">
         <div class="col-md-12">
             <div class="text-center m-b-md">
                 <h3>Registration</h3>
-                <small>Full suported AngularJS WebApp/Admin template with very clean and aesthetic style prepared for your next app. </small>
             </div>
             <div class="hpanel">
                 <div class="panel-body">
@@ -72,7 +71,7 @@
                             </div>
                             <div class="checkbox col-lg-12">
                                 <input type="checkbox" class="i-checks" checked>
-                                Sigh up for our newsletter
+                                Sign up for our newsletter
                             </div>
                             </div>
                             <div class="text-center">
@@ -85,7 +84,7 @@
     </div>
     <div class="row">
         <div class="col-md-12 text-center">
-            <strong>HOMER</strong> - AngularJS Responsive WebApp <br/> 2015 Copyright Company Name
+            <strong>The_ReFactory</strong> <br/> Migration Analytics - Simplified <br/> 2017
         </div>
     </div>
 </div>
