--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -40,12 +40,11 @@
     <a href="/" class="btn btn-primary">Back</a>
 </div>
 
-<div class="login-container">
+<div class="login-container animate-panel">
     <div class="row">
         <div class="col-md-12">
             <div class="text-center m-b-md">
-                <h3>PLEASE LOGIN TO APP</h3>
-                <small>This is the best app ever!</small>
+                <h3>Login</h3>
             </div>
             <div class="hpanel">
                 <div class="panel-body">
@@ -53,17 +52,14 @@
                             <div class="form-group">
                                 <label class="control-label" for="username">Username</label>
                                 <input type="text" title="Please enter you username" required value="" name="username" id="username" class="form-control">
-                                <span class="help-block small">Your unique username to app</span>
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="password">Password</label>
                                 <input type="password" title="Please enter your password" required value="" name="password" id="password" class="form-control">
-                                <span class="help-block small">Yur strong password</span>
                             </div>
                             <div class="checkbox">
                                 <input type="checkbox" class="i-checks" checked>
                                      Remember login
-                                <p class="help-block small">(if this is a private computer)</p>
                             </div>
                             <button class="btn btn-success btn-block">Login</button>
                             <a class="btn btn-default btn-block" href="/auth/register">Register</a>
@@ -74,7 +70,7 @@
     </div>
     <div class="row">
         <div class="col-md-12 text-center">
-            <strong>HOMER</strong> - AngularJS Responsive WebApp <br/> 2015 Copyright Company Name
+            <strong>The_ReFactory</strong> <br/> Migration Analytics - Simplified <br/> 2017
         </div>
     </div>
 </div>
