working on animate panel jenkiness

--- a/views/projects/home.ejs
+++ b/views/projects/home.ejs
@@ -4,7 +4,7 @@
 
 <!-- Main Wrapper -->
 <div id="wrapper">
-
+  <div class="content animate-panel">
 <div class="normalheader ">
     <div class="hpanel">
         <div class="panel-body">
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-    <div class="content animate-panel">
+    <div class="content">
       <% projects.forEach(function (project) { %>
         <div class="projects">
             <div class="col-lg-6">
@@ -87,5 +87,5 @@
     </div>
 
 </div>
-
+</div>
 <% include partials/footer %>
