--- a/views/clients/home.ejs
+++ b/views/clients/home.ejs
@@ -4,6 +4,7 @@
 
 <!-- Main Wrapper -->
 <div id="wrapper">
+  <div class="content animate-panel">
 
 <div class="normalheader ">
     <div class="hpanel">
@@ -25,7 +26,7 @@
     </div>
 </div>
 
-<div class="content animate-panel">
+<div class="content">
   <% clients.forEach(function (client) { %>
     <div class="col-lg-3">
       <a href="/clients/<%=client.id%>">
@@ -51,6 +52,7 @@
       </a>
     </div>
 <% }) %>
+</div>
 </div>
 </div>
 
