--- a/views/clients/nav/main.ejs
+++ b/views/clients/nav/main.ejs
@@ -118,7 +118,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="/auth/logout">
-                        <i class="pe-7s-upload pe-rotate-90"></i>
+                        <i id="logout" class="pe-7s-upload pe-rotate-90"></i>
                     </a>
                 </li>
             </ul>
