--- a/views/projects/single.ejs
+++ b/views/projects/single.ejs
@@ -360,11 +360,12 @@
                     <div class="col-md-6">
                         <div class="hpanel">
                             <div class="panel-body text-center">
+                              <a href="/clients/<%=client.id%>">
                                 <img alt="logo" class="img-circle img-small" src="<%=client.avatar%>">
                                 <div class="m-t-sm">
                                     <strong><%=client.first_name%> <%=client.last_name%></strong>
-                                    <p class="small"><%=client.email%></p>
                                 </div>
+                              </a>
                             </div>
                         </div>
                     </div>
