--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -5,7 +5,7 @@
 <!-- Main Wrapper -->
 <div id="wrapper">
 
-  <div class="content animate-panel">
+  <div class="content">
         <div class="row">
             <div class="col-lg-12 text-center welcome-message">
                 <h2>
@@ -17,6 +17,7 @@
                 </p>
             </div>
         </div>
+        <div class="content animate-panel">
         <div class="row">
             <div class="col-lg-12">
                 <div class="hpanel">
@@ -376,6 +377,7 @@
                 </div>
             </div>
         </div>
+      </div>
     </div>
 
     <!-- Footer-->
