--- a/views/clients/nav/main.ejs
+++ b/views/clients/nav/main.ejs
@@ -117,8 +117,8 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="/auth/logout">
-                        <i id="logout" class="pe-7s-upload pe-rotate-90"></i>
+                    <a id="logout">
+                        <i class="pe-7s-upload pe-rotate-90"></i>
                     </a>
                 </li>
             </ul>
