--- a/views/clients/home.ejs
+++ b/views/clients/home.ejs
@@ -65,7 +65,7 @@ $('#logout').click(function () {
     swal({
                 title: "Logging you off",
                 text: "Are you sure?",
-                type: "warning",
+                type: "error",
                 showCancelButton: true,
                 confirmButtonColor: "#DD6B55",
                 confirmButtonText: "Yes, log off!",
@@ -74,14 +74,14 @@ $('#logout').click(function () {
                 closeOnCancel: false },
                 function (isConfirm) {
                     if (isConfirm) {
-                      swal("Bye Champ", "See you soon!", "error");
+                      swal("Bye Champ", "See you soon!", "success");
                         setTimeout(
                         function()
                         {
                           window.location.href = "http://localhost:3000/auth/logout"
                         }, 1000);
                     }else {
-                        swal("Glad to see you stay", "We were about to lose out shit", "success");
+                        swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "images/tacogif.gif" });
                     }
                 });
 });
