--- a/views/users/nav/main.ejs
+++ b/views/users/nav/main.ejs
@@ -117,7 +117,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="/auth/logout">
+                  <a id="logout">
                         <i class="pe-7s-upload pe-rotate-90"></i>
                     </a>
                 </li>
