--- a/views/users/partials/footer.ejs
+++ b/views/users/partials/footer.ejs
@@ -12,12 +12,39 @@
 <script src="../../stylesheets/vendor/iCheck/icheck.min.js"></script>
 <script src="../../stylesheets/vendor/peity/jquery.peity.min.js"></script>
 <script src="../../stylesheets/vendor/sparkline/index.js"></script>
+<script src="../../stylesheets/vendor/sweetalert/lib/sweet-alert.min.js"></script>
+
 
 <!-- App scripts -->
 <script src="../../javascripts/homer.js"></script>
 <script src="../../javascripts/charts.js"></script>
 
 <script>
+
+    $('#logout').click(function () {
+        swal({
+                    title: "Logging you off",
+                    text: "Are you sure?",
+                    type: "error",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Yes, log off!",
+                    cancelButtonText: "No, lets stay!",
+                    closeOnConfirm: false,
+                    closeOnCancel: false },
+                    function (isConfirm) {
+                        if (isConfirm) {
+                          swal("Bye Champ", "See you soon!", "success");
+                            setTimeout(
+                            function()
+                            {
+                              window.location.href = "http://localhost:3000/auth/logout"
+                            }, 1000);
+                        }else {
+                            swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "images/tacogif.gif" });
+                        }
+                    });
+    });
 
     $(function () {
 
@@ -75,36 +102,7 @@
                 show: false
             }
         };
-
         $.plot($("#flot-income-chart"), chartIncomeData, chartIncomeOptions);
-
-
-
-    });
-
-    $('#logout').click(function () {
-        swal({
-                    title: "Logging you off",
-                    text: "Are you sure?",
-                    type: "error",
-                    showCancelButton: true,
-                    confirmButtonColor: "#DD6B55",
-                    confirmButtonText: "Yes, log off!",
-                    cancelButtonText: "No, lets stay!",
-                    closeOnConfirm: false,
-                    closeOnCancel: false },
-                    function (isConfirm) {
-                        if (isConfirm) {
-                          swal("Bye Champ", "See you soon!", "success");
-                            setTimeout(
-                            function()
-                            {
-                              window.location.href = "http://localhost:3000/auth/logout"
-                            }, 1000);
-                        }else {
-                            swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "images/tacogif.gif" });
-                        }
-                    });
     });
 
 </script>
