--- a/views/projects/nav/main.ejs
+++ b/views/projects/nav/main.ejs
@@ -130,7 +130,7 @@
 <aside id="menu">
     <div id="navigation">
         <div class="profile-picture">
-            <a href="index.html">
+            <a href="/users/<%=user.id%>/edit">
                 <img src="<%=user.avatar%>" height="70" width="70" class="img-circle m-b" alt="logo">
             </a>
 
