--- a/views/projects/partials/footer.ejs
+++ b/views/projects/partials/footer.ejs
@@ -71,7 +71,7 @@
                               window.location.href = "http://localhost:3000/auth/logout"
                             }, 1000);
                         }else {
-                            swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "images/tacogif.gif" });
+                            swal({   title: "Glad to see you stay!",   text: "We were about to lose out shit",   imageUrl: "../images/tacogif.gif" });
                         }
                     });
     });
