screen map jenkiness taken away

--- a/views/admin/nav/main.ejs
+++ b/views/admin/nav/main.ejs
@@ -130,7 +130,7 @@
 <aside id="menu">
     <div id="navigation">
         <div class="profile-picture">
-            <a href="/users/<%=user.id%>/edit">
+            <a href="/users/<%=admin.id%>/edit">
                 <img src="<%=admin.avatar%>" height="70" width="70" class="img-circle m-b" alt="logo">
             </a>
 
